One-line fix for bug 62187, "JS shell producing too much console output on Mac" (r=waldemar, r=rginda). Without this fix, running the test driver is impossible on Mac 9. [NOT PART OF BROWSER BUILD].